--- a/src/app/workspaces/historic-registration/historic-registration-workspace.component.html
+++ b/src/app/workspaces/historic-registration/historic-registration-workspace.component.html
@@ -1,4 +1,4 @@
-<div class="explorer" fxLayoutGap="32px">
+<div class="explorer">
 
   <div *ngIf="displayFileViewer"
     class="primary-resizable"
