--- a/src/app/workspaces/land-transactions/land-transactions-workspace.component.html
+++ b/src/app/workspaces/land-transactions/land-transactions-workspace.component.html
@@ -1,6 +1,6 @@
 <emp-ng-spinner #spinner [visible]="isLoadingTransaction"></emp-ng-spinner>
 
-<div class="explorer" fxLayoutGap="32px">
+<div class="explorer">
 
   <div class="primary"
        [fxHide]="displayFileViewer"
