--- a/src/app/workspaces/main-layout/main-layout.component.scss
+++ b/src/app/workspaces/main-layout/main-layout.component.scss
@@ -6,6 +6,11 @@
  */
 
 @import "../../../styles/general-styles";
+@import "toolbar/toolbar.component.scss";
+
+$breakpoint-width: 1600px;
+$margin-size: 16px;
+$margin-size-small: 8px;
 
 .main-layout {
   @include column;
@@ -29,97 +34,28 @@
   height: 35px;
 }
 
-.nav-bar {
-  @include row;
-
-  min-height: 68px;
-  overflow: visible;
-  justify-content: space-between;
-  align-items: center;
-  color: $text-color-dark;
-
-  .left-section {
-    @include row;
-
-    width: auto;
-    align-items: center;
-    white-space: nowrap;
-  }
-
-  .search-and-settings {
-    @include row;
-
-    width: auto;
-    align-items: center;
-
-    > * {
-      margin-left: 32px;
-    }
-  }
-
-  .logo {
-    max-height: 46px;
-    margin-left: 8px;
-  }
-
-  .header-container {
-    margin-left: 8px;
-    margin-top: -6px;
-  }
-
-  .header {
-    text-transform: uppercase;
-  }
-
-  .subheader {
-    font-size: 8pt;
-    margin-top: 4px;
-  }
-
-  .main-menu {
-    margin-left: 16px;
-  }
-
-  @media only screen and (max-width: 600px) {
-    .main-menu {
-      margin-left: 0;
-    }
-  }
-}
-
 .content {
   @include column;
 }
 
 .workarea {
   @include expand;
+
+  height: calc(100vh - 212px);
 }
 
-.side-bar {
-  background-color: $secondary-color;
-  color: $white;
-  font-size: 10pt;
-  padding: 20px 12px;
+.sidenav-left {
   width: 300px;
 }
 
-.sidenav-toggle {
-  background-color: #edeef0;
-  height: 52px;
-  margin: 0;
-  padding: 8px;
-  padding-top: 12px;
+.sidenav-right {
+  max-width: 90%;
 }
 
-.right-bar {
-  display: none;
-  background-color: $primary-color;
-  width: 200px;
-}
-
-.footer {
-  display: none;
-  height: 40px;
-  padding: $margin-size;
-  border-top: 1px inset $border-color-light;
+.btn-collapse-sidenav-right {
+  position: fixed;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.12), 0 2px 4px rgba(0, 0, 0, 0.24);
+  bottom: 0;
+  margin-left: calc((#{$margin-size} + #{$toolbar-item-size}) * -1);
+  margin-bottom: $margin-size;
 }
