--- a/src/app/workspaces/main-layout/nav-header/nav-header.component.html
+++ b/src/app/workspaces/main-layout/nav-header/nav-header.component.html
@@ -1,7 +1,30 @@
-<div class="menu-bar">
+<div *ngIf="appLayoutConfig.displaySubMenu" class="menu-bar"
+  [class.menu-bar-priority]="!appLayoutConfig.displayHeader">
   <emp-ng-nav-menu
       class="menu"
       [items]="navigationHeader.mainMenu"
       (navMenuItemClick)="onClickMenu($event)">
   </emp-ng-nav-menu>
+</div>
+
+<div class="header" *ngIf="appLayoutConfig.displayHeader">
+  <div class="title">
+    {{navigationHeader.title}}
+
+    <ng-container *ngIf="navigationHeader.hint">
+      <div class="breadcrumb-divider">|</div>
+      <div class="breadcrumb">
+        {{navigationHeader.hint}}
+        {{navigationHeader.title ? ' - ' + navigationHeader.title : ''}}
+      </div>
+    </ng-container>
+  </div>
+
+  <div class="action-buttons">
+    <button class="btn-header" *ngFor="let action of navigationHeader.actions"
+      (click)="onActionButtonClicked(action)">
+      {{action.name}}
+      <mat-icon *ngIf="action.icon">{{action.icon}}</mat-icon>
+    </button>
+  </div>
 </div>
