--- a/src/app/workspaces/main-layout/user-session/user-session.component.scss
+++ b/src/app/workspaces/main-layout/user-session/user-session.component.scss
@@ -5,20 +5,31 @@
  * See LICENSE.txt in the project root for complete license information.
  */
 
-@import "../../../../styles/variables";
+@import "../top-bar/top-bar.component.scss";
+
+.toolbar-item {
+  margin-right: 0;
+}
 
 .container {
-  padding: 0 32px;
-  text-align: end;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+  height: 100%;
+  margin-left: 16px;
 }
 
 .user-name {
   text-transform: uppercase;
   font-size: 10pt;
+  line-height: 10pt;
+  padding-bottom: 8px;
 }
 
 .logout {
   font-size: 8pt;
+  line-height: 8pt;
   text-decoration: underline;
 }
 
@@ -26,9 +37,23 @@
   color: $text-color-dark;
 }
 
-@media only screen and (max-width: 600px) {
-  .container {
-    padding: 0 5px 0 0;
-    text-align: end;
+.menu-user-name-info {
+  font-size: 12pt;
+  font-weight: 600;
+  padding: 0 16px;
+  line-height: $toolbar-item-size;
+  min-height: $toolbar-item-size;
+}
+
+.menu-user-toggle {
+  margin-left: 16px;
+
+  &.mat-button-toggle-group {
+    height: 24px;
+    align-items: center;
+  }
+
+  .mat-button-toggle-label-content {
+    line-height: 24px !important;
   }
 }
