--- a/src/app/workspaces/main-layout/main-menu/main-menu.component.scss
+++ b/src/app/workspaces/main-layout/main-menu/main-menu.component.scss
@@ -7,6 +7,16 @@
 
 @import "../../../../styles/variables";
 
+.mat-menu-item.selected {
+  background: rgba(0, 0, 0, 0.04);
+  color: $primary-color;
+  font-weight: 600;
+}
+
+.mat-menu-trigger.active a {
+  color: $primary-color;
+}
+
 .nav-bar {
   min-height: 28px;
 }
@@ -22,27 +32,37 @@
 }
 
 .nav-bar li {
+  border-bottom: 2px solid white;
   color: $secondary-color-light;
   padding: 5px 16px;
   white-space: nowrap;
+  margin-right: 5px;
+}
+
+.nav-bar li.selected {
+  border-bottom: 2px solid $primary-color;
+  transition: 0.3s ease-out;
+  font-weight: 700;
 }
 
 .nav-bar li:last-of-type {
+  margin-right: 0;
   border-right: none;
 }
 
-.nav-bar a,
-a:visited {
-  color: $secondary-color;
+.nav-bar li a,
+.nav-bar li a:visited {
+  color: $secondary-color-semi-light;
   font-weight: 400;
   text-decoration: none;
 }
 
-.nav-bar a:hover {
-  border-bottom: 2px solid $primary-color;
+.nav-bar li:hover a {
+  color: $primary-color;
+  font-weight: 600;
 }
 
-.selected {
-  border-bottom: 2px solid $primary-color;
-  font-weight: 700 !important;
+.nav-bar li.selected a {
+  color: $primary-color;
+  font-weight: 600;
 }
