Rfx move main layout to app level and fix paths

--- a/src/app/main-layout/main-menu/main-menu.component.scss
+++ b/src/app/main-layout/main-menu/main-menu.component.scss
@@ -5,7 +5,7 @@
  * See LICENSE.txt in the project root for complete license information.
  */
 
-@import "../../../../styles/variables";
+@import "../../../styles/variables";
 
 .mat-menu-item.selected {
   background: rgba(0, 0, 0, 0.04);
