--- a/src/app/main-layout/nav-header/nav-header.component.scss
+++ b/src/app/main-layout/nav-header/nav-header.component.scss
@@ -5,7 +5,7 @@
  * See LICENSE.txt in the project root for complete license information.
  */
 
-@import "../../../../styles/general-styles";
+@import "../../../styles/general-styles";
 
 $header-color-gradient-initial: $warning-color-dark;
 $header-color-gradient-final: $warning-color;
