--- a/src/app/main-layout/toolbar/toolbar.component.scss
+++ b/src/app/main-layout/toolbar/toolbar.component.scss
@@ -4,7 +4,7 @@
  *
  * See LICENSE.txt in the project root for complete license information.
  */
-@import "../../../../styles/general-styles.scss";
+@import "../../../styles/general-styles.scss";
 @import "../top-bar/top-bar.component.scss";
 
 .toolbar-container {
