--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -100,6 +100,11 @@ $control-disabled-color: $secondary-color;
 $control-width: calc(100% - 10px);
 $control-height: 28px;
 
+$control-margin: 2px 8px 2px 0;
+$control-padding: 2px 6px;
+$select-padding: 2px 2px 2px 6px;
+$control-border-radius: 2px;
+
 $button-color: #f8f8f8;
 $button-selected-color: #e6e6e6;
 
