--- a/src/styles/general-styles.scss
+++ b/src/styles/general-styles.scss
@@ -113,12 +113,12 @@ button.btn-margin-right {
   color: $control-color;
   font: $control-font;
   font-weight: normal;
-  margin: 2px 8px 2px 0;
-  padding: 2px 2px 2px 6px;
+  margin: $control-margin;
+  padding: $control-padding;
   vertical-align: middle;
   height: $control-height;
   width: $control-width;
-  border-radius: 2px;
+  border-radius: $control-border-radius;
   transition: 0.3s ease-out;
 }
 
@@ -181,12 +181,13 @@ input:focus {
   color: $control-color;
   font: $control-font;
   font-weight: normal;
-  margin: 2px 8px 2px 0;
-  padding: 2px 2px 2px 6px;
+  line-height: 1.125em;
+  margin: $control-margin;
+  padding: 6px;
   vertical-align: middle;
   min-height: $control-height;
   width: $control-width;
-  border-radius: 2px;
+  border-radius: $control-border-radius;
   transition: 0.3s ease-out;
   resize: vertical;
 }
