--- a/src/app/views/security/user-login/user-login.component.html
+++ b/src/app/views/security/user-login/user-login.component.html
@@ -1,55 +1,74 @@
-<div class="outer form-container-text">
+<div class="outer">
 
-  <div class="login-div">
+  <div class="authentication-container">
 
-    <div class="left-column">
-      <div>
-        <img class="logo" src="assets/img/customer/vertical.logo.png" alt="Gobierno del Estado de Tlaxcala" />
-      </div>
-    </div>
+      <div class="authentication-center">
 
-    <div class="central-column"></div>
+        <div class="authentication-section-logo">
+          <img class="logo" src="assets/img/customer/horizontal.logo.png" alt="Talanza"/>
+        </div>
 
-    <div class="right-column">
 
-      <div class="authentication-section-welcome">
-        <strong>Registro Público de la Propiedad</strong>
-        <div class="hint" style="font-size:10pt;margin-top:4px;">Secretaría de Finanzas</div>
-        <div class="hint" style="font-size:12pt;margin-top:4px;"><span>Gobierno del Estado de Zacatecas</span></div>
-      </div>
+        <div class="authentication-section-welcome">
+          <strong>{{appLayoutData.name}}</strong>
+          <div class="hint">{{appLayoutData.hint}}</div>
+          <div class="hint-bold" *ngIf="appLayoutData.organization">{{appLayoutData.organization}}</div>
+        </div>
 
-      <br>
-
-      <form autocomplete="off" [formGroup]="form" [empNgSpinnerHost]="spinner">
-
-        <emp-ng-spinner #spinner [visible]="submitted">
-
-        </emp-ng-spinner>
 
         <div class="authentication-section-form">
 
-          <label for="userID">Usuario:</label>
-          <input type="text" class="text-box" id="userID"
-                 autocomplete="username" autofocus required
-                 formControlName="userID">
+          <form autocomplete="off" [formGroup]="form">
 
-          <label for="password">Contraseña:</label>
-          <input type="password" class="text-box" id="password"
-                 autocomplete="current-password" required
-                 formControlName="password">
+            <label for="userID">Username:</label>
+            <div class="login-field-container">
+              <input type="text" class="text-box" id="userID" autocomplete="username" autofocus
+                formControlName="userID"
+                [class.invalid-control]="form.get('userID').invalid && form.get('userID').touched">
+            </div>
 
-          <div *ngIf="exceptionMsg"
-                class="inline-error">{{exceptionMsg}}</div>
+            <label for="password">Password:</label>
+            <div class="login-field-container">
+              <input [type]="showPassword ? 'text' : 'password'" class="text-box"
+                id="password" autocomplete="current-password"
+                formControlName="password"
+                [class.invalid-control]="form.get('password').invalid && form.get('password').touched">
+              <mat-icon class="input-icon" *ngIf="showPasswordModeSelected === 'icon'"
+                (click)="toggleShowPassword()">
+                {{showPassword ? 'visibility_off' : 'visibility'}}
+              </mat-icon>
+            </div>
 
-          <button type="button" [disabled]="!form.valid"
-                  [class.btn]="!form.valid" [class.btn-action]="form.valid"
-                  (click)="login()">Ingresar</button>
+            <div *ngIf="exceptionMsg" class="inline-error">
+              {{exceptionMsg}}
+            </div>
+
+            <div class="footer-submit-container">
+              <mat-checkbox *ngIf="showPasswordModeSelected === 'check'"
+                [checked]="showPassword"
+                (click)="$event.stopPropagation"
+                (change)="toggleShowPassword()"
+                class="mat-checkbox-login">
+                Show password
+              </mat-checkbox>
+
+              <div></div>
+
+              <button type="sumbit"
+                [class.btn]="form.invalid"
+                [class.btn-secondary]="form.valid"
+                [class.spinner]="submitted"
+                [style.marginRight.px]="8"
+                (click)="login()">
+                Log In
+              </button>
+            </div>
+
+          </form>
 
         </div>
 
-      </form>
-
-    </div>
+      </div>
 
   </div>
 
