--- a/src/app/views/security/user-login/user-login.component.scss
+++ b/src/app/views/security/user-login/user-login.component.scss
@@ -7,81 +7,121 @@
 
 @import "../../../../styles/variables";
 
+$medium-max-width: 1024px;
+$logo-width: 350px;
+$logo-padding: 20px;
+
 .outer {
+  height: 100vh;
+  padding-right: 15%;
+  display: flex;
   align-items: center;
-  display: flex;
-  height: 80vh;
-  justify-content: center;
-  width: 100%;
-  color: $primary-color;
+  justify-content: flex-end;
+  background: $white;
+  // background: url("../../../../assets/img/customer/background.png") no-repeat center center fixed;
+  // background-size: cover;
 }
 
-.login-div {
+.authentication-container {
   display: flex;
-  height: 340px;
-  width: 780px;
+  align-items: center;
+  height: 100%;
+  background: -prefix-linear-gradient(top, $warning-color-dark, $warning-color);
+  background: linear-gradient(to top, $warning-color-dark, $warning-color);
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.12), 0 2px 4px rgba(0, 0, 0, 0.24);
 }
 
-.left-column {
-  height: 300px;
-  width: 260px;
-  font-size: 12pt;
+.authentication-center {
+  margin-top: -25%;
+}
+
+.authentication-section-logo {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  padding: $logo-padding;
+  margin: 0 -5px;
+  background: white;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.12), 0 2px 4px rgba(0, 0, 0, 0.24);
 }
 
 .logo {
-  padding-top: 36px;
-  width: 220px;
-}
-
-.central-column {
-  height: 340px;
-  width: 16px;
-  background-color: $warning-color-dark;
-}
-
-.right-column {
-  height: 340px;
-  width: 380px;
-  margin-left: 30px;
+  width: $logo-width;
+  height: auto;
+  margin: auto;
 }
 
 .authentication-section-welcome {
-  padding-top: 28px;
-  padding-left: 12px;
-  font-size: 15pt;
+  padding: 30px $logo-padding;
+  font-size: 14.5pt;
   text-transform: uppercase;
-  color: $primary-color;
+  color: $secondary-color-dark;
   line-height: 16pt;
 }
 
 .authentication-section-form {
-  padding-left: 12px;
-  padding-top: 12px;
-  width: 75%;
-}
+  padding: 0 12px 0 $logo-padding;
+  height: 164px;
 
-.authentication-section-form input {
-  margin-bottom: 20px;
+  .login-field-container {
+    position: relative;
+    padding-bottom: 10px;
+  }
+
+  .footer-submit-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 10px;
+  }
 }
 
 .authentication-section-footer {
-  margin-left: 20px;
-  margin-top: 20px;
+  margin-left: $logo-padding;
+  margin-top: $logo-padding;
   font-size: 10pt;
 }
 
 label {
   font-size: 10pt;
   font-weight: 500;
-  padding-top: 12px;
+  color: $white;
 }
 
 .hint {
+  font-size: 9.5pt;
+  white-space: nowrap;
+  color: $white;
+  margin-top: 4px;
+}
+
+.hint-bold {
   font-size: 10pt;
   white-space: nowrap;
+  color: $white;
+  margin-top: 4px;
+  font-weight: 800;
+}
+
+.inline-error {
+  width: $logo-width - 10px;
+  min-height: 30px;
+  color: $secondary-color-dark;
+  font-size: 10pt;
+  font-weight: 400;
+  margin: 0 8px 12px 0;
+  padding: 4px;
+  border: 1px solid $secondary-color-dark;
+  border-radius: 2px;
 }
 
 input:-webkit-autofill {
   box-shadow: 0 0 0 32px $control-background-color inset;
   -webkit-box-shadow: 0 0 0 32px $control-background-color inset;
+}
+
+@media only screen and (max-width: $medium-max-width) {
+  .outer {
+    padding-right: 0;
+  }
 }
