Update customer images, favicon and colors

--- a/src/app/main-layout/nav-bar/nav-bar.component.html
+++ b/src/app/main-layout/nav-bar/nav-bar.component.html
@@ -2,7 +2,7 @@
 
   <div class="left-section">
 
-    <img class="logo" src="assets/img/customer/main-page.logo.png"
+    <img class="logo" src="assets/img/customer/logo.png"
       [alt]="appConfig.data.name"/>
 
     <div *ngIf="appConfig.layout.displayNavbarHeader" class="header-container">
