--- a/src/app/views/security/user-login/user-login.component.html
+++ b/src/app/views/security/user-login/user-login.component.html
@@ -5,7 +5,7 @@
       <div class="authentication-center">
 
         <div class="authentication-section-logo">
-          <img class="logo" src="assets/img/customer/horizontal.logo.png" alt="Talanza"/>
+          <img class="logo" src="assets/img/customer/logo-horizontal.png" alt="Talanza"/>
         </div>
 
 
