--- a/src/styles/ng-select.scss
+++ b/src/styles/ng-select.scss
@@ -61,7 +61,7 @@
 }
 
 .ng-dropdown-panel .ng-dropdown-panel-items .ng-option {
-  padding: 2px 2px 2px 6px;
+  padding: $select-padding;
   font-size: 0.9em;
 }
 
