Rfx clean css code and responsive improvements

--- a/src/app/main-layout/nav-bar/nav-bar.component.html
+++ b/src/app/main-layout/nav-bar/nav-bar.component.html
@@ -2,8 +2,8 @@
 
   <div class="left-section">
 
-    <img class="logo" src="assets/img/customer/logo.png"
-      [alt]="appConfig.data.name"/>
+    <img class="logo" [alt]="appConfig.data.organization"
+      [src]="appConfig.layout.displayNavbarHeader ? 'assets/img/customer/logo.png' : 'assets/img/customer/logo-horizontal.png'"/>
 
     <div *ngIf="appConfig.layout.displayNavbarHeader" class="header-container">
       <span class="header">{{appConfig.data.name}}</span>
